syntax = "proto3";
option go_package = "./entry-task-proto";

message ReplyWithNicknameAndFileName {
  string nickname = 1;
  string imagePath = 2;
}

message Response {
  int32 status = 1; // 0 for fail, 1 for success, set as enum later
  int32 id = 2;
  string oldFileName = 3; // only used when updating filename
}